--- a/python_modules/dagster-ext/tox.ini
+++ b/python_modules/dagster-ext/tox.ini
@@ -17,3 +17,13 @@ allowlist_externals =
 commands =
   !windows: /bin/bash -c '! pip list --exclude-editable | grep -e dagster'
   pytest -c ../../pyproject.toml -vv ./dagster_ext_tests
+
+[testenv:jsonschema]
+deps =
+  -e .
+  jsonschema
+  pydantic>2
+allowlist_externals =
+  git
+commands =
+  python ../../scripts/generate_ext_json_schema.py
