Don't use pyproject.toml
Potentially another quick path to not failing on missing dagster
installation warnings. If this doesn't work, I can just install dagster
(although we don't need it for these tests so I'd prefer not to)

--- a/.buildkite/dagster-buildkite/tox.ini
+++ b/.buildkite/dagster-buildkite/tox.ini
@@ -6,8 +6,9 @@ download = True
 passenv = CI_* COVERALLS_REPO_TOKEN BUILDKITE* DAGSTER_GIT_REPO_DIR
 deps =
   -e .
+  -e ../../python_modules/dagster
 
 allowlist_externals =
   /bin/bash
 commands =
-  pytest -c ../../pyproject.toml -vv ./dagster_buildkite_tests
+  pytest ./dagster_buildkite_tests
