--- a/.buildkite/dagster-buildkite/tox.ini
+++ b/.buildkite/dagster-buildkite/tox.ini
@@ -2,13 +2,14 @@
 
 [testenv]
 usedevelop = true
-download = True
+download = true
 passenv = CI_* COVERALLS_REPO_TOKEN BUILDKITE* DAGSTER_GIT_REPO_DIR
 deps =
-  -e .
+  pytest
   -e ../../python_modules/dagster
+  -e .
 
 allowlist_externals =
   /bin/bash
 commands =
-  pytest ./dagster_buildkite_tests
+  pytest -vv ./dagster_buildkite_tests -s
