add dagster-ext as dep so tests work

--- a/python_modules/dagster/tox.ini
+++ b/python_modules/dagster/tox.ini
@@ -16,6 +16,7 @@ deps =
   general_tests_old_protobuf: protobuf<4
   -e ../dagster-test
   -e .[mypy,test,pyright]
+  -e ../dagster-ext
 allowlist_externals =
   /bin/bash
 commands =
